<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rmtrx</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="grocery_list_activity_name">Grocery List</string>
    <string name="messages_activity_name">Messages</string>
    <string name="login_activity_name">Login</string>
    <string name="db_attempt_name">DB Test</string>

    <string name="bulletin_board_activity_name">Bulletin Board</string>
    <string name="bb_add_post_activity_name">Add Post</string>
    <string name="bb_edit_post_activity_name">Edit Post</string>

    <string name="finances_activity_name">Finances</string>

    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_send_info">Send Info</string>
    <string name="action_search">Search</string>
    <string name="show_messages">show_messages</string>
    <string name="hello">Hello</string>
    <string name="Delete_first">Delete First</string>
    <string name="add_new">Add New</string>
    <string name="registration_activity_name">Register</string>
    <string name="Register">Register</string>
    <string name="newResidence">Create User</string>
    <string name="JoinResidence">Join Residence</string>
    <string name="CreateResidence">Create Residence</string>
    <string name="firstName">First Name</string>
    <string name="first_and_last_name">Name</string>
    <string name="email">Email</string>
    <string name="number_of_residence">Total Number of Roommates</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="join_residence_intro">Please enter your residence code below</string>
    <string name="logout_name">Logout</string>
    <string name="name">Name: </string>
    <string name="address">Address: </string>
    <string name="residence_info">Info</string>
    <string name="user_list_title">Housemates:</string>
    <string name="code">Code: </string>
    <string name="Number_left">Spots Left: </string>
    <string name="lastName">Last Name</string>
    <string name="GenerateCode">Generate Invite Code</string>
    <string name="nameOfResidence">Name of Residence</string>
    <string name="Code_of_residence">Code of the residence you would like to join</string>
    <string name="Go">Go</string>
    <string name="lastName">Last Name</string>
    <string name="residence_name">Residence Name</string>
    <string name="subject">Object</string>
    <string name="name_of_residence_title">Residence: </string>
    <string name="codeButtonDirection"><![CDATA[<-Click for new code]]></string>
    <string name="showResidents">Show Residents</string>
    <string name="Truncate">Truncate</string>
    <string name="sendMessageButtonText">Send Message</string>
    <string name="messageText">New EditText</string>
    <string name="messagetexthint">Message...</string>


</resources>
