<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <EditText android:id="@+id/add_item"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:inputType="text"
                />

    </LinearLayout>

    <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:listSelector="@drawable/list_selector"/>

    <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new"
            android:onClick="onClick"
            android:layout_gravity="left|center_vertical"/>

    <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete_first"
            android:onClick="onClick"
            android:layout_gravity="left|center_vertical"/>

</LinearLayout>