<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="horizontal">


    <!--<TextView-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/name"-->
            <!--android:textSize="@dimen/Residence_font_size"-->
            <!--android:layout_marginTop="10dip"-->
            <!--android:layout_marginLeft="10dip"-->
            <!--/>-->
    <TextView
            android:layout_alignParentRight="false"
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dip"
            android:textSize="@dimen/Residence_font_size"
            />
    <!--<TextView-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/name_of_residence_title"-->
            <!--android:layout_marginTop="50dip"-->
            <!--android:layout_marginLeft="10dip"-->
            <!--android:textSize="@dimen/Residence_font_size"-->

            <!--/>-->
    <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/residence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameOfResidence"
            android:textSize="@dimen/Residence_font_size"
            android:layout_marginTop="80dip"
            android:layout_marginRight="10dip"
            />

       <!--<ListView-->
              <!--android:layout_alignParentLeft="true"-->
              <!--android:id="@+id/nameList"-->
              <!--android:layout_width="wrap_content"-->
              <!--android:layout_height="wrap_content"-->
              <!--android:layout_marginTop="160dip"-->
              <!--android:layout_marginRight="10dip"-->
           <!--/>-->

    <Button
            android:id="@+id/generateCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GenerateCode"
            android:layout_marginTop="170dip"
            android:onClick="generateCode"
            android:layout_centerInParent="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/code"
            android:text="@string/codeButtonDirection"

            android:layout_toRightOf="@+id/truncate"
            android:layout_below="@+id/generateCode"/>
    <!--<TextView-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/user_list_title"-->
            <!--android:layout_marginTop="220dip"-->
            <!--android:layout_marginLeft="10dip"-->
            <!--android:textSize="@dimen/Residence_font_size"-->

            <!--/>-->
    <Button
            android:id="@+id/showResidents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showResidents"
            android:layout_marginTop="300dip"
            android:onClick="showResidentsList"
            android:layout_centerHorizontal="true"/>


    <!--This is just for testing purposes-->
    <Button
            android:id="@+id/truncate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Truncate"
            android:layout_marginTop="400dip"
            android:onClick="truncateTable"/>


</RelativeLayout>