<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome To Rmtrx"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25dp"/>

    <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:id="@+id/space2"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"/>
    <EditText android:id="@+id/login_name"
              android:layout_width="84dp"
              android:layout_height="50dp"
              android:inputType="text"
              android:layout_gravity="center"/>

    <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:id="@+id/space1"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            />
    <EditText android:id="@+id/p_word"
              android:layout_width="83dp"
              android:layout_height="50dp"
              android:layout_gravity="center"
              android:password="true"/>

    <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:id="@+id/space3"
            android:layout_gravity="center"/>

    <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/Login"
            android:onClick="sendLoginInfo"
            android:layout_gravity="center"
            android:textStyle="italic"/>

    <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:id="@+id/space"
            android:layout_gravity="center"/>

    <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/newResidence"
            android:onClick="register"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:clickable="true"/>

</LinearLayout>