<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
        >


    <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/Residence_font_size"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:textStyle="bold"/>
    <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_marginTop="10dip"
            android:textSize="@dimen/Residence_font_size"
            android:layout_marginLeft="20dip"
            android:textStyle="italic"/>
    <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:textSize="@dimen/Residence_font_size"

            android:textStyle="bold"/>
    <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/Residence_font_size"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="20dip"
            android:textStyle="italic"/>
    <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_list_title"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:textSize="@dimen/Residence_font_size"

            android:textStyle="bold"/>
       <ListView
              android:layout_alignParentLeft="true"
              android:id="@+id/nameList"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:layout_marginRight="10dip"
               />


    <TextView
              android:layout_alignParentLeft="true"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:layout_marginTop="10dip"
              android:text="@string/code"
     />
    <TextView
             android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dip"
             android:layout_marginTop="10dip"
             android:id="@+id/code"
        />
    <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/Number_left"
            />
    <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:id="@+id/number_of_people_left"

        />
</GridLayout>